# MasqueradeBall

./: CLAUDE.md  CMakeLists.txt  ClaudesPlan.md  InitialPrompt.md  LICENSE  PKGBUILD  README.md  masquerade-ball.desktop
.claude/: settings.local.json
assets/: lorem_ipsum.txt
cmake/: Dependencies.cmake
src/: app.cpp  app.hpp  config.hpp.in  debug_log.hpp  game_state.hpp  main.cpp
src/game/: game_session.cpp  game_session.hpp  scoring.cpp  scoring.hpp
src/input/: gamepad_provider.cpp  gamepad_provider.hpp  input_action.hpp  input_manager.cpp  input_manager.hpp  keyboard_provider.cpp  keyboard_provider.hpp  kitty_keyboard.cpp  kitty_keyboard.hpp
src/level/: cubic_spline.cpp  cubic_spline.hpp  level_generator.cpp  level_generator.hpp  level_segment.hpp  perlin_noise.hpp  stdin_reader.cpp  stdin_reader.hpp
src/physics/: mask_body.cpp  mask_body.hpp  physics_world.cpp  physics_world.hpp  softbody_ball.cpp  softbody_ball.hpp  terrain_body.cpp  terrain_body.hpp
src/rendering/: ball_renderer.cpp  ball_renderer.hpp  camera.cpp  camera.hpp  mask_renderer.cpp  mask_renderer.hpp  renderer.cpp  renderer.hpp  terrain_renderer.cpp  terrain_renderer.hpp
src/ui/: game_over_overlay.cpp  game_over_overlay.hpp  hud.cpp  hud.hpp  level_complete_overlay.cpp  level_complete_overlay.hpp  options_menu.cpp  options_menu.hpp  pause_menu.cpp  pause_menu.hpp  start_menu.cpp  start_menu.hpp  text_bar.cpp  text_bar.hpp
